Changes for APR 1.3.0

  *) Fix error handling where apr_uid_* and apr_gid_* could return
     APR_SUCCESS in failure cases.  [Joe Orton]

  *) Fix apr_file_gets() and apr_file_read() to catch write failures
     when flushing pending writes for a buffered file.  [Joe Orton]

  *) Fix apr_file_write() infinite loop on write failure for buffered
     files.  [Erik Huelsmann <ehuels gmail.com>]

  *) Add %pm support to apr_snprintf() for printing the error string
     corresponding to an apr_status_t value.  [Joe Orton]

  *) Add APR_ARRAY_IDX() and APR_ARRAY_PUSH() convenience macros to
     apr_tables.h.  [Garrett Rooney]

Changes for APR 1.2.1

  *) Refactor Win32 condition variables code to address bugs 27654, 34336.
     [Henry Jen <henryjen ztune.net>, E Holyat <eholyat yahoo.com>]

Changes for APR 1.2.0

  *) If getpwuid_r or getgrgid_r set their results to NULL, it is an error.
     PR 34053. [Paul Querna]

  *) Switch to lazy initialization of the pollset that's used within
     apr_file_t on platforms where apr_wait_for_io_or_timeout() doesn't
     use poll(2).  (This fixes a performance problem observed in httpd-2.x
     on OS X due to the use of poll now being disabled by default on that
     platform.)  [Brian Pane]

  *) Fix Pollset corruption on Solaris 10. [Paul Querna]

  *) Add %pt support to apr_snprintf() for printing an apr_os_thread_t
     in hex format.  [Jeff Trawick]

  *) Support APR_SO_SNDBUF and APR_SO_RCVBUF on Windows.  PR 32177.
     [Sim <sgobbi datamanagement.it>, Jeff Trawick]

  *) Fix apr_table_overlap()'s handling of tables allocated from
     different pools.  [Joe Schaefer <joe+gmane@sunstarsys.com>]

  *) Add support for uuid_generate on OS X 10.4. [Paul Querna]

  *) Include the C preprocessor flags in --cflags for pkg-config.
     [Paul Querna]

  *) Fix issue with poll() followed by net I/O yielding EAGAIN on
     Mac OS 10.4 (Darwin 8). [Wilfredo Sanchez]

Changes for APR 1.1.1
